# Py_Robot

./: .gitattributes  NodiRos.docx  README.md  backup.ttt  py_robot_prolog.pl  py_robot_vrep.ttt
py_robot/: CMakeLists.txt  package.xml
py_robot/Node/: Controller_Node.py  OpenMV_Node.py  Opencv_Node.py  Prolog_IA_Node.py  prova_lidar_compass.py  prova_motor_switch.py  prova_mv_camera.py  prova_pi_camera.py  prova_prolog_ia.py  prova_sonar_volt.py
py_robot/Node/demo/: dimostrazione_movimenti.py  dimostrazione_movimento_v2.py
py_robot/Node/tests/: Opencv_Node_Vision.py  Simulazione_Lidar_Compass_Node.py  Simulazione_Motor_Switch.py  Simulazione_Mv_Camera_Node.py  Simulazione_Pi_Camera_Node.py  Simulazione_Sonar_Volt_Node.py  Vision_Node.py  test_motori.py
py_robot/launch/: node_launcher.launch
py_robot/msg/: Compass_Node.msg  Controller-Node.msg  Controller_Node.msg  Lidar-Compass-Node.msg  Lidar_Compass_Node.msg  MV_Camera_Node.msg  Motor_Switch_Node.msg  Pi_Camera_Node.msg  Prolog-Node.msg  Senso.msg  Sonar-Volt-Node.msg
py_robot/other/: Py_Robot.ttt  Py_Robot2.ttt  camera.py  py_robot_prolog.pl
py_robot/other/Arduini/: serial.ino
py_robot/other/Arduini/Arduini_sonar_switch_ros/: Arduini_sonar_switch_ros.ino
py_robot/other/Arduini/Arduino Nodes/Compass_Servo_Lidar_Node/: Compass_Servo_Lidar_Node.ino
py_robot/other/Arduini/Arduino Nodes/Motor_Switch_Node/: Motor_Switch_Node.ino
py_robot/other/Arduini/Arduino Nodes/Motor_Switch_Node_Lib_Riscritta/: Motor_Switch_Node_Lib_Riscritta.ino
py_robot/other/Arduini/Arduino Nodes/Sonar_Volt_Node/: Sonar_Volt_Node.ino
py_robot/other/Arduini/Arduino Nodes/compass_servo_lidar/: compass_servo_lidar.ino
py_robot/other/Arduini/Attuatore/: servo_Sweep.ino
py_robot/other/Arduini/Compass_Servo_Lidar/: compass_servo_lidar.ino
py_robot/other/Arduini/Compass_Servo_Lidar/compass_servo_lidar/: compass_servo_lidar.ino
py_robot/other/Arduini/Sensors/: ir_dist_corretto.ino  sonar_triplo.ino
py_robot/other/Arduini/Sonar_switch/: sonar_switch.ino
py_robot/other/Arduini/Wiring diagrams/Fritzing projects/: Nodo_compass_.fzz  Nodo_compass_lidar_servo.fzz  Sonar_Switch_Node_Arduino_Nano.fzz
py_robot/other/Arduini/Works/IR_occhi_arduino/: IR_occhi.ino
py_robot/other/Arduini/motor_driver_lib_riscritta/: motor_driver_lib_riscritta.ino
py_robot/other/Arduini/motori/: motori.ino
py_robot/other/Arduino Nodes/Compass_Node/: Compass_Node.ino
py_robot/other/Arduino Nodes/Motor_Switch_Node/: Motor_Switch_Node.ino
py_robot/other/Arduino library/lidar/: lidar.ino
py_robot/other/PORT/: __init__.py
py_robot/other/RobotVrep/: ProvaSocket.py  actNode.py  conversion.py  main.py  sensorNode.py  thinkNode.py
py_robot/other/RobotVrep/System/: __init__.py
py_robot/other/opencv - openvm/: edge_2.py  py_robot_openmv.py
py_robot/other/vr_py_robot/: .packge.xml.swp  CMakeLists.txt  README.md  package.xml
py_robot/other/vr_py_robot/scripts/: sensorNode.py  thinkNode.py
(+36 files in other folders)
