<?xml version="1.0"?>
<package format="2">
  <name>py_robot</name>
  <version>1.0.0</version>
  <description>The py_robot package</description>

  <maintainer email="giovanni.degasperis@univaq.it">Giovanni De Gasperis</maintainer>
  <maintainer email="steano.decina@student.univaq.it">Stefano Decina</maintainer>
  <maintainer email="alessandro.mattei1@student.univaq.it">Alessandro Mattei</maintainer>
  <maintainer email="mattia.caputo1@student.univaq.it">Mattia Caputo</maintainer>
  <maintainer email="sararebecca.dinaccio@student.univaq.it">Sara Rebecca Di Naccio</maintainer>

  <license>MIT</license>
  <url type="website"></url>

  <author email="steano.decina@student.univaq.it">Stefano Decina</author>
  <author email="alessandro.mattei1@student.univaq.it">Alessandro Mattei</author>
  <author email="mattia.caputo1@student.univaq.it">Mattia Caputo</author>
  <author email="sararebecca.dinaccio@student.univaq.it">Sara Rebecca Di Naccio</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
